add csrf protection to forms

--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -44,6 +44,7 @@
                                                                     %>"
                                                                 name="productId">
                                                                 <% } %>
+                                                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
                                                                     <button
                                                                         class="btn"
