--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -15,6 +15,7 @@
                                         method="POST">
                                         <input type="hidden" value="<%= p._id %>"
                                         name="productId">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <button class="btn danger"
                                             type="submit">Delete</button>
                                     </form>
@@ -24,6 +25,7 @@
                                 <hr>
                                 <div class="centered">
                                     <form action="/create-order" method="POST">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <button type="submit" class="btn">Order
                                             Now!</button>
                                     </form>
